# imu-ble-device-shared

./: .gitmodules  CMakeLists.txt  imu-ble-device-shared.cpp  library.json
include/algorithms/: kalman_filter_1D.hpp  spacial_conversions.hpp
include/algorithms/ahrs/: ahrs.hpp  angular.hpp
include/algorithms/orientation_estimator/: kalman1D_estimator.hpp  orientation_estimator.hpp  tilt_estimator.hpp
include/constants/: ble.hpp  uuid.hpp
include/containers/: angle.hpp  rotation_euler.hpp  rotation_quarternion.hpp  system_state.hpp  triaxal_reading.hpp  triaxial_reading.hpp
include/containers/rotation/: euler.hpp  quarternion.hpp
src/algorithms/: kalman1D_estimator.cpp  kalman_filter_1D.cpp  spacial_conversions.cpp  tilt_estimator.cpp
src/algorithms/ahrs/: angular.cpp
src/containers/: rotation_euler.cpp
tests/algorithms/: test_spacial_conversions.cpp  test_tilt_estimator.cpp
tests/algorithms/ahrs/: test_angular.cpp
tests/constants/: test_uuid.cpp
tests/containers/: test_angle.cpp  test_rotation_euler.cpp  test_rotation_quarternion.cpp  test_system_state.cpp  test_triaxal_reading.cpp  test_triaxial_reading.cpp
tests/containers/rotation/: test_euler.cpp  test_quarternion.cpp
